--- a/src/app/fashion/fashion.component.html
+++ b/src/app/fashion/fashion.component.html
@@ -1,1 +1,7 @@
 <p>fashion works!</p>
+<div class="border mt-2">
+    <a [routerLink]='["products","Mens"]'>Mens</a>
+    <a [routerLink]='["products","Womens"]'>Womens</a>
+    <a [routerLink]='["products","Kids"]'>Kids</a>
+</div>
+<router-outlet></router-outlet>
