--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,5 @@
 <p>products works!</p>
+<h4>Selected Category : {{selectedCategory}}</h4>
+
+
+<button class="btn btn-success ms-4 mt-2" (click)="backToPrevious()">Back</button>
