--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,31 @@
-<div class="">
-<a routerLink="/">Home</a>
-<a routerLink="/about">About</a>
-<a routerLink="/products">Products</a>
-<a routerLink="/fashion">Fashion</a>
-<a routerLink="/electronics">Electronics</a>
-<a routerLink="/deals">Deals</a>
+<nav class="navbar navbar-expand-lg bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand text-white" >Welcome</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active text-white" aria-current="page" routerLink="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="/deals">Today's Deals</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-white" aria-current="page" routerLink="/electronics">Electronics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="/fashion">Fashion</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
 
 <router-outlet></router-outlet>
-
-
-
-
-
-</div>
